fix(product-toggle): added visible copy on desktop, tweaked styles and hover transition

--- a/css/templates/lune/components/_product-toggle.css
+++ b/css/templates/lune/components/_product-toggle.css
@@ -7,7 +7,30 @@
   height: 3.125rem; /* 50px */
   border-radius: 50%;
   box-shadow: 0 3px 12px -3px rgba(0, 0, 0, .5);
-  font-size: 0;
+  letter-spacing: var(--letter-spacing-3);
+}
+
+@media (--breakpoint-md) {
+  .lune-product-toggle {
+    /*
+    * Bespoke margin in order to aligh the text at the same height
+    * as the scoll indicator text in the page
+    */
+    margin-bottom: 1.3125rem; /* 21px */
+    margin-right: 1.3125rem; /* 21px */
+  }
+}
+
+.lune-product-toggle.lune-theme-dark {
+  background-color: var(--color-dark-grey);
+  box-shadow: 0 3px 12px -3px rgba(0, 0, 0, 1);
+}
+
+.lune-product-toggle span {
+  position: absolute;
+  right: calc(100% + 1rem);
+  width: 14em;
+  text-align: right;
 }
 
 .lune-product-toggle::after {
@@ -19,27 +42,13 @@
   border-radius: 50%;
   transform-origin: 50%;
   transform: scale(.5);
-  transition: transform .2s ease-out;
+  transition: transform .2s cubic-bezier(0.55, 0.085, 0.68, 0.53);
   content: '';
+  background-color: currentColor;
 }
 
 .lune-product-toggle:hover::after,
 .lune-product-toggle:focus::after {
-  transform: scale(.6);
-}
-
-.lune-product-toggle-noir {
-  background: var(--color-light-1)
-}
-
-.lune-product-toggle-noir::after {
-  background: var(--color-dark-grey);
-}
-
-.lune-product-toggle-blanc {
-  background: var(--color-dark-grey);
-}
-
-.lune-product-toggle-blanc::after {
-  background: var(--color-light-1)
+  transform: scale(.7);
+  transition-timing-function: cubic-bezier(0.25, 0.46, 0.45, 0.94);
 }
